# routes/api.php
@@ -32,6 +32,7 @@ Route::middleware('auth:sanctum')->prefix('students')->group(function () {
     Route::get('profile', [StudentAuthController::class, 'getProfile']);
     Route::put('profile', [StudentAuthController::class, 'updateProfile']);
     Route::get('exams', [StudentAuthController::class, 'getExams']);
+    Route::get('exams/{exam}/questions', [StudentExamAttemptController::class, 'questions']);
     Route::post('exams/{exam}/submit', [StudentExamAttemptController::class, 'submit']);
     Route::get('exams/{exam}/results', [StudentExamAttemptController::class, 'results']);
     Route::post('change-password', [StudentAuthController::class, 'changePassword']);
